@@ -1,3 +1,8 @@
+Sat Dec 02 23:34:09 2000  George Lebl <jirka@5z.com>
+
+	* panel.c, menu.c: fix the unref ugliness by removing the signal
+	  connection when creating the root panel menu.
+
 Sat Dec 02 23:16:29 2000  George Lebl <jirka@5z.com>
 
 	* launcher.c, panel.c: a bit of cleanup. use gnome-globe.png for
